Fixed issue with icon not appearing on desktop (I was missing a closing curly brace in my @rule) and used unset to make sure my undo button aligned well on mobile and desktop

--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ article {
 
 .go, .reset {
     position: fixed;
-    left: 150px;
-    bottom: 150px;
+    left: 15px;
+    bottom: 15px;
     border: 1px solid black;
     font-size: 30px;
     padding: 30px;
@@ -56,11 +56,12 @@ article {
     background-color: white;
 }
 
+
 @media only screen and (max-width: 425px) { /* On mobile, button = tied to bottom right corner */
     .go, .reset {
-        position: fixed;
+        left: unset; /* Set the left attribute back to undefined */
         right: 15px;
-        bottom: 15px;
+    }
 }
 
 
